--- a/public/css/style.css
+++ b/public/css/style.css
@@ -8,7 +8,7 @@
 }
 
 .container {
-  margin: 2rem auto;
+  margin: 3rem auto;
   width: 75%;
 }
 
@@ -16,23 +16,79 @@
   text-align: center;
 }
 
+.form-container input {
+  font-size: 1.5rem;
+  background-color: darkgrey;
+  border: none;
+  border-radius: 5px;
+  padding: 0.5rem;
+  box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
+}
+
+.form-container input::placeholder {
+  opacity: 0.7;
+  color: white;
+}
+
 .form-container button {
+  padding: 0 1.5rem;
+  font-size: 1.5rem;
+  margin: 1rem auto;
+  display: block;
+  background-color: #5cb85c;
+  border: none;
+  border-radius: 5px;
+  color: white;
+  box-shadow: rgba(67, 71, 85, 0.27) 0px 0px 0.25em,
+    rgba(90, 125, 188, 0.05) 0px 0.25em 1em;
+}
+
+.form-container button:active {
+  transform: scale(0.95);
+  background-color: #458845;
 }
 
 .result-container {
+  margin-top: 1.5rem;
   text-align: center;
 }
 
 .movie-data-list {
+  font-size: 2rem;
+  font-weight: bold;
   list-style: none;
-  line-height: 2rem;
+  line-height: 3rem;
+  margin-bottom: 1rem;
 }
 
-.result-container span {
-  font-weight: bold;
+.movie-year {
+  font-size: 1.3rem;
+  font-weight: normal;
+}
+.movie-genres {
+  font-size: 1rem;
+  font-style: italic;
+  font-weight: normal;
 }
 
 .result-container img {
-  width: 250px;
+  width: 450px;
   border-radius: 10px;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+}
+
+.movie-overview-container {
+  margin: 1rem auto;
+  list-style: none;
+  line-height: 2rem;
+  width: 75%;
+}
+
+.movie-overview-container li {
+  font-weight: bold;
+  font-size: 1.5rem;
+}
+
+.movie-overview-container p {
+  font-size: 1rem;
 }
