--- a/public/css/style.css
+++ b/public/css/style.css
@@ -19,10 +19,10 @@
 .form-container input {
   font-size: 1.5rem;
   background-color: darkgrey;
-  border: none;
+  border: 0.5px;
   border-radius: 5px;
   padding: 0.5rem;
-  box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
 
 .form-container input::placeholder {
@@ -39,8 +39,7 @@
   border: none;
   border-radius: 5px;
   color: white;
-  box-shadow: rgba(67, 71, 85, 0.27) 0px 0px 0.25em,
-    rgba(90, 125, 188, 0.05) 0px 0.25em 1em;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
 
 .form-container button:active {
