smol ejs changes

--- a/views/search.ejs
+++ b/views/search.ejs
@@ -27,8 +27,8 @@
         <ul class="movie-data-list">
           <li><%= movieDetails.title %></li>
           <li class="movie-year">
-            <span>(<%= movieDetails.year %>)</span> &#8226
-            <span><%= movieDetails.rating%></span> / 10
+            <span><%= movieDetails.year %></span> &#8226
+            <span><%= movieDetails.rating%></span>/10
           </li>
           <li class="movie-genres"><%= movieDetails.genres %></li>
         </ul>
